syntax = "proto3";
package coolstore;
option csharp_namespace = "VND.CoolStore.Search.DataContracts.Api.V1";

import "search_dto.proto";

service ProductSearchApi {
  rpc SearchProduct(SearchProductRequest) returns (SearchProductResponse) {};
}

message SearchProductRequest {
  string query = 1;
  double price = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message SearchProductResponse {
  int32 total = 1;
  int32 page = 2;
  repeated SearchProductModel results = 3;
  repeated SearchAggsByTags category_tags = 4;
  repeated SearchAggsByTags inventory_tags = 5;
  int32 elapsed_milliseconds = 6;
  string correlation_id = 7;
}
